iam/base/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - iam.lanlabs.ch
      secretName: iam-tls-secret
  rules:
  - host: iam.lanlabs.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              name: http
